[package]
name = "piplop-sdk"
version = "0.1.0"
edition = "2024"
description = "Piplop SDK - CLI and library for IP registration"
license = "MIT"

[lib]
name = "piplop_sdk"
path = "src/lib.rs"

[[bin]]
name = "piplop"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JSON Schema
schemars = "1.1"

# Types
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"
